--- a/GDDL/GDDL.csproj
+++ b/GDDL/GDDL.csproj
@@ -46,25 +46,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Deque\Deque.cs" />
-    <Compile Include="Deque\Utility.cs" />
+    <Compile Include="Config\StringGenerationContext.cs" />
+    <Compile Include="Config\StringGenerationOptions.cs" />
+    <Compile Include="IContextProvider.cs" />
+    <Compile Include="Exceptions\LexerException.cs" />
+    <Compile Include="Exceptions\ParserException.cs" />
+    <Compile Include="Exceptions\ReaderException.cs" />
     <Compile Include="Lexer.cs" />
-    <Compile Include="LexerException.cs" />
-    <Compile Include="ParseContext.cs" />
-    <Compile Include="ParserException.cs" />
     <Compile Include="Parser.cs" />
+    <Compile Include="ParsingContext.cs" />
     <Compile Include="Reader.cs" />
-    <Compile Include="ReaderException.cs" />
     <Compile Include="Structure\Backreference.cs" />
     <Compile Include="Structure\Element.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structure\Set.cs" />
-    <Compile Include="StringGenerationContext.cs" />
     <Compile Include="Structure\Value.cs" />
     <Compile Include="Token.cs" />
+    <Compile Include="Tokens.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Util\QueueList.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
