--- a/GDDL/GDDL.nuspec
+++ b/GDDL/GDDL.nuspec
@@ -11,7 +11,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>First release.</releaseNotes>
-    <copyright>Copyright 2016</copyright>
+    <copyright>Copyright 2017 David Quintana</copyright>
     <tags>data description language configuration</tags>
   </metadata>
 </package>
