--- a/GDDLTests/GDDLTests.csproj
+++ b/GDDLTests/GDDLTests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>GDDL.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
