--- a/GDDLTests/GDDLTests.csproj
+++ b/GDDLTests/GDDLTests.csproj
@@ -6,6 +6,8 @@
     <IsPackable>false</IsPackable>
 
     <RootNamespace>GDDL.Tests</RootNamespace>
+
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
   </PropertyGroup>
 
   <ItemGroup>
