--- a/GDDL/GDDL.csproj
+++ b/GDDL/GDDL.csproj
@@ -7,7 +7,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
-    <Version>2.0.0</Version>
+    <Version>2.0.0-alpha.1</Version>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <RepositoryUrl>https://github.com/gigaherz/GDDL.git</RepositoryUrl>
     <PackageProjectUrl>https://github.com/gigaherz/GDDL</PackageProjectUrl>
