Switch to a custom implementation for an order-preserving Dictionary, and disable map key ordering by default.

--- a/GDDL.Demo/Properties/launchSettings.json
+++ b/GDDL.Demo/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "GDDL.Demo": {
       "commandName": "Project",
-      "workingDirectory": "D:\\Projects\\GDDL\\Samples"
+      "workingDirectory": "D:\\Projects\\GDDL.NET\\Samples"
     }
   }
 }
