Refactor and expand upon the Query concept. Queries can now be used both within the language, and from the host.

--- a/GDDL.Demo/GDDL.Demo.csproj
+++ b/GDDL.Demo/GDDL.Demo.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <ProjectGuid>{9DD360AB-54A0-4403-825D-8D71B11D17EA}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
